kubernetes/monitoring/ingress.yaml
---
# yaml-language-server: $schema=https://json.schemastore.org/traefik-v3.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: traefik
spec:
  routes:
    - match: Host(`grafana.axis.scottmckendry.tech`)
      kind: Rule
      middlewares:
        - name: ipallowlist
          namespace: traefik
      services:
        - name: kube-prometheus-stack-grafana
          namespace: monitoring
          port: 80
  tls:
    secretName: axis-tls
---
# yaml-language-server: $schema=https://json.schemastore.org/traefik-v3.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: traefik
spec:
  routes:
    - match: Host(`prometheus.axis.scottmckendry.tech`)
      kind: Rule
      middlewares:
        - name: ipallowlist
          namespace: traefik
        - name: forwardauth
          namespace: traefik
      services:
        - name: kube-prometheus-stack-prometheus
          namespace: monitoring
          port: 9090
  tls:
    secretName: axis-tls
---
# yaml-language-server: $schema=https://json.schemastore.org/traefik-v3.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
  namespace: traefik
spec:
  routes:
    - match: Host(`am.axis.scottmckendry.tech`)
      kind: Rule
      middlewares:
        - name: ipallowlist
          namespace: traefik
        - name: forwardauth
          namespace: traefik
      services:
        - name: kube-prometheus-stack-alertmanager
          namespace: monitoring
          port: 9093
  tls:
    secretName: axis-tls
